# hungariest_city

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  wheels.yml
src/hungariest_city/: __init__.py  hungary.py
tests/: test_hungariest_city.py
