[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>42", "wheel"]

[project]
name = "hungariest_city"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
authors = [
    {name = "Vinson Fan", email = "vinsfan@berkeley.edu"}
]
description = "Get the most info Hungary package"
dependencies = ["wikipedia"]

[options]
package = ["hungariest_city"]

[tool.setuptools]
package-dir = {"" = "src"}


